# net-binobj-cleaner

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/services/: delete_folder.rs  get_folder_info.rs  list_files.rs  mod.rs  scan_dir.rs
